test/files/neg/no-predef.check
no-predef.scala:2: error: type mismatch;
 found   : 5L.type (with underlying type scala.Long)
 required: java.lang.Long
  def f1 = 5L: java.lang.Long
           ^
no-predef.scala:3: error: type mismatch;
 found   : java.lang.Long
 required: scala.Long
  def f2 = new java.lang.Long(5) : Long
           ^
no-predef.scala:4: error: value map is not a member of String
  def f3 = "abc" map (_ + 1)
                 ^
three errors found
